[package]
name = "middleman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4"}
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = { version = "0.25.0" }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql", "chrono"] }
serde = { version = "1.0.196", features = ["derive"] }
bincode = { version = "2.0.0-rc.3" }
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["v4"] }
anyhow = "1.0.79"
log = "0.4.20"
bcrypt = "0.15.0"
base64 = "0.21.7"
chacha20poly1305 = { version = "0.10.1"}
rand = "0.8.5"
